// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NumberGTE(5) expectTypeFailure(1): TYPE_FAILURE::NumberGTE(1) 1`] = `
Struct {
  "errors": Array [
    Struct {
      "actual": "1",
      "expected": [Function],
      "message": "Invalid value \\"1\\" supplied to NumberGTE",
      "path": Array [],
    },
  ],
  "value": "1",
}
`;

exports[`NumberGTE(5) expectTypeFailure(4): TYPE_FAILURE::NumberGTE(4) 1`] = `
Struct {
  "errors": Array [
    Struct {
      "actual": 4,
      "expected": [Function],
      "message": "Invalid value 4 supplied to NumberGTE",
      "path": Array [],
    },
  ],
  "value": 4,
}
`;
